--- a/FiveMKoreaServer주식/SDs-FiveM-View/View/PublicLoginView.resx
+++ b/FiveMKoreaServer주식/SDs-FiveM-View/View/PublicLoginView.resx
@@ -117,4 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAHx8f/xwcHP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAJCQk/4KCgv8fHx//HBwc/wAAAAAAAAAAAAAAAA8PD/8LCwv/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAKSkp/5WVlf8kJCT/goKC/3d3d/8cHBz/AAAAAAAAAAASEhL/wMDA/wsL
+        C/8AAAAAAAAAAAAAAAAAAAAALS0t/6ampv8pKSn/lZWV/yQkJP8hISH/d3d3/xwcHP8ZGRn/AFNT/xIS
+        Ev8PDw//AAAAAAAAAAAAAAAAMDAw/7W1tf8tLS3/pqam/ykpKf8mJib/jIyM/yEhIf93d3f/bGxs/xkZ
+        Gf8AAAAAAAAAAAAAAAAAAAAAAAAAADIyMv8wMDD/tbW1/y0tLf8rKyv/np6e/yYmJv+MjIz/ISEh/x8f
+        H/9sbGz/GRkZ/wAAAAASEhL/AAAAAAAAAAAAAAAAMjIy/zAwMP8uLi7/rq6u/ysrK/+enp7/JiYm/6Gh
+        of+VlZX/Hx8f/2xsbP8ZGRn/VFRU/wAAAAAAAAAAAAAAAAAAAAAyMjL/u7u7/y4uLv+urq7/Kysr/7a2
+        tv8mJib/oaGh/5WVlf8fHx//bGxs/xkZGf8AAAAAAAAAAAAAAAAAAAAAAAAAADIyMv+7u7v/Li4u/8jI
+        yP+/v7//KSkp/yYmJv+hoaH/lZWV/x8fH/8cHBz/AAAAAAAAAAAAAAAAAAAAAAAAAAAzMzP/MjIy/9fX
+        1//Q0ND/LS0t/ysrK//AwMD/JiYm/6Ghof+VlZX/Hx8f/wAAAAAAAAAAAAAAAAAAAAAAAAAANDQ0/+Xl
+        5f/e3t7/MDAw/y4uLv/IyMj/Kysr/8DAwP8mJib/JCQk/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADU1
+        Nf80NDT/MzMz/zIyMv/X19f/0NDQ/8jIyP8rKyv/KSkp/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAANTU1/zQ0NP/l5eX/3t7e/9fX1//Q0ND/yMjI/ysrK/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAADY2Nv/v7+//6urq/+Xl5f/e3t7/19fX/y4uLv8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAANjY2/+/v7//q6ur/5eXl/zIyMv8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA2Njb/NTU1/zQ0NP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA8/8AAOHPAADAxwAAgAcAAAAfAAAACwAAgAMAAMADAADgAwAA4AMAAOAHAADgDwAA8A8AAPAf
+        AAD4PwAA/H8AAA==
+</value>
+  </data>
 </root>
