--- a/FiveMKoreaServer주식/SDs-FiveM-View/View/ChartView.resx
+++ b/FiveMKoreaServer주식/SDs-FiveM-View/View/ChartView.resx
@@ -117,4 +117,64 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAGACoDAAAFgAAACgAAAAgAAAAQAAAAAEAGAAAAAAAgAwAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABmzP9mzP9mzP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABmzP9mzP8AAAAAAABm
+        zP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABmzP9mzP8AAAAAAAAAAAAAAABmzP8AAAAAAAAAAAAAAACIiIiIiIiIiIj/
+        ///d3d0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABmzP9mzP8AAAAAAAAA
+        AAAAAAAAAAAAAABmzP8AAAAAAACIiIiIiIiIiIj////////////d3d3d3d0AAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAABmzP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIiIiIiIiIiIj/
+        ///////////////////d3d3d3d3d3d0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABmzP8A
+        AAAAAAAAAAAAAAAAAAAAAAAAAACIiIiIiIiIiIj///////////+IiIj////d3d3////d3d3d3d3d3d3d
+        3d0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABmzP8AAAAAAAAAAAB3d3d3d3cAAACIiIiIiIj/
+        ///////////////////////d3d3d3d3////d3d3d3d3d3d3d3d3d3d0AAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAB3d3d3d3eqqqp3d3cAAAD////////////////////////d3d3d3d3d3d3d3d3/
+        ///d3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB3d3d3d3f///////+qqqoA
+        AAD///////+IiIj////////d3d3d3d3d3d3d3d0AAADd3d3////d3d3d3d3d3d3d3d3d3d3d3d3d3d0A
+        AAAAAAAAAAAAAAAAAAB3d3d3d3f///////////////+qqqoAAADd3d3////////d3d3d3d3d3d3d3d0A
+        AAAAAABmzP/d3d3////d3d3d3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAAAAAAAAAB3d3f/////////////
+        ///////d3d2qqqoAAADd3d3d3d3d3d3d3d3d3d0AAAAAAABmzP9mzP9mzP/d3d3////d3d3d3d3d3d3d
+        3d3d3d3d3d3d3d0AAAAAAAAAAAD////////////////////d3d3d3d3d3d2qqqoAAADd3d3d3d3d3d0A
+        AAAAAABmzP9mzP9mzP9mzP9mzP/d3d3////d3d3d3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAAAAAD///+I
+        iIj////d3d3d3d3d3d3d3d3d3d2qqqoAAADd3d0AAAAAAABmzP9mzP9mzP9mzP9mzP9mzP9mzP/d3d3/
+        ///d3d3d3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAD////////d3d3d3d3d3d3d3d3d3d0AAAAAAACqqqoA
+        AADd3d0AAABmzP9mzP9mzP9mzP9mzP9mzP9mzP9mzP/d3d3////d3d3d3d3d3d3d3d3d3d3d3d3d3d0A
+        AAAAAADd3d3d3d3d3d3d3d3d3d0AAAAAAADMmQDMZgCqqqoAAADd3d0AAABmzP9mzP9mzP9mzP9mzP9m
+        zP9mzP8Amczd3d3////d3d3d3d3d3d3d3d3d3d3d3d3d3d0AAAAAAADd3d3d3d3d3d0AAAAAAADMmQDM
+        mQDMmQDMZgCqqqoAAADd3d0AAABmzP9mzP9mzP9mzP9mzP8AmcwAmcz////d3d3d3d3////d3d3d3d3d
+        3d3d3d3d3d3d3d0AAAAAAAD///8AAAAAAADMmQDMmQDMmQDMmQDMmQDMZgCqqqoAAADd3d0AAABmzP9m
+        zP9mzP8AmcwAmcz////d3d3d3d3////////d3d3////d3d3d3d3d3d3d3d3d3d0AAAAAAAD///8AAADM
+        mQDMmQDMmQDMmQDMmQDMmQDMZgCqqqoAAADd3d0AAABmzP8AmcwAmcz////////d3d3////////////d
+        3d3d3d3d3d3////d3d3d3d3d3d3d3d0AAAAAAAD///8AAADMmQDMmQDMmQDMmQDMmQDMmQDMZgCqqqoA
+        AADd3d0AAAAAmcz////d3d3d3d3d3d3////////d3d3d3d3d3d3d3d3d3d3d3d3////////d3d3d3d0A
+        AAAAAAD///8AAADMmQDMmQDMmQDMmQDMmQDMmQDMZgCqqqoAAADd3d3d3d3d3d3d3d3d3d3////////d
+        3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3////d3d0AAAAAAAD///8AAADMmQDMmQDMmQDMmQDM
+        mQDMmQDMZgCqqqoAAADd3d3d3d3d3d3////////d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d
+        3d3d3d3d3d3///8AAAAAAAD///8AAADMmQDMmQDMmQDMmQDMZgDMZgD///+qqqoAAACqqqr////////d
+        3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAD///8AAADM
+        mQDMmQDMZgDMZgD////d3d3d3d2qqqoAAAAAAACqqqqqqqrd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d
+        3d3d3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAAAAAD///8AAADMZgDMZgD////d3d3d3d3///+qqqq7u7u7
+        u7uqqqoAAAAAAACqqqqqqqqqqqrd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAAAAAAA
+        AAAAAAD///8AAAD////d3d3d3d3///////+7u7u7u7vd3d3d3d3d3d2qqqqqqqoAAAAAAACqqqqqqqrd
+        3d3d3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAAAAAAAAAAAAAAAAAAAAAD////d3d3d3d3///////+7u7u7
+        u7vd3d3d3d3d3d3d3d3d3d3d3d3d3d2qqqqqqqoAAAAAAACqqqqqqqqqqqqqqqqqqqoAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAD///////+7u7u7u7vd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d
+        3d3d3d2qqqqqqqoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAC7u7vd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADd3d3d3d3d3d3d3d3d3d3d
+        3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADd3d3d3d3d3d3d3d3d3d3d3d0AAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/+H///+B8f/+AYD/+BAAf+BwAD/h4AAf4wAAD+AAAAfgAAADwAAAA4AAAAMAA
+        AACAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAADAAAADwAA
+        AD+AAAD/wAAH//AAH//8AH///4H//w==
+</value>
+  </data>
 </root>
